--- a/.github/workflows/setup-environments.yaml
+++ b/.github/workflows/setup-environments.yaml
@@ -41,8 +41,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
       - name: Create environments with secrets and variables
         env:
@@ -73,7 +71,7 @@ jobs:
             [prod]="prod-${AWS_REGION}"
           )
 
-          echo "::group::Creating environments and setting secrets/variables"
+          echo "::group::Creating environments and setting secrets and variables"
           for env in "${!ENV_ACCOUNT_MAP[@]}"; do
             echo "::group::Processing environment: $env"
             account_name="${ENV_ACCOUNT_MAP[$env]}"
@@ -83,6 +81,8 @@ jobs:
             # Create environment (idempotent)
             gh api --method PUT "repos/${GITHUB_REPOSITORY}/environments/$env"
 
+            ############## Add secrets to the environment    --- Start
+            echo "::group::Adding secrets to environment: $env"
             echo "Adding secret 'AWS Role Arn' to $env"
             gh secret set AWS_ROLE_ARN \
               --env "$env" \
@@ -91,10 +91,12 @@ jobs:
             echo "Adding secret 'Terraform State S3 Bucket' to $env"
             gh secret set TF_STATE_BUCKET_NAME \
               --env "$env" \
-              --body "${TF_STATE_BUCKET_BASE_NAME}-${account_id}-${env_name}-${AWS_REGION}"
+              --body "${TF_STATE_BUCKET_BASE_NAME}-${account_id}-${env_name}"
             echo "::endgroup::"
+            ############## Add secrets to the environment      -- End
 
-            echo "::group::Creating environment variables: $env"
+            ############## Add variables to the environment    --- Start
+            echo "::group::Adding variables to environment: $env"
             gh variable set AWS_REGION \
               --env "$env" \
               --body "${AWS_REGION}"
@@ -105,11 +107,13 @@ jobs:
 
             gh variable set TF_STATE_BUCKET_NAME \
               --env "$env" \
-              --body "${TF_STATE_BUCKET_BASE_NAME}-${account_id}-${env_name}-${AWS_REGION}"
+              --body "${TF_STATE_BUCKET_BASE_NAME}-${account_id}-${env_name}"
 
             gh variable set AWS_ROLE_ARN \
               --env "$env" \
               --body "arn:aws:iam::${account_id}:role/${AWS_OIDC_ROLE}"
+            echo "::endgroup::"
+            ############## Add variables to the environment   --- End
             echo "::endgroup::"
           done
           echo "::endgroup::"
