chore: simplify environment naming by removing AWS region suffix

--- a/.github/workflows/setup-environments.yaml
+++ b/.github/workflows/setup-environments.yaml
@@ -71,10 +71,10 @@ jobs:
           )
 
           declare -A ENV_NAME_MAP=(
-            [ci]="devl-${AWS_REGION}"
-            [devl]="devl-${AWS_REGION}"
-            [test]="test-${AWS_REGION}"
-            [prod]="prod-${AWS_REGION}"
+            [ci]="devl"
+            [devl]="devl"
+            [test]="test"
+            [prod]="prod"
           )
 
           echo "::group::Creating environments and setting secrets and variables"
