--- a/.github/workflows/setup-environments.yaml
+++ b/.github/workflows/setup-environments.yaml
@@ -53,7 +53,9 @@ jobs:
           set -euo pipefail
 
           echo "::group::Parsing CODEOWNERS and adding collaborators"
+          echo "============CODEOWNERS================"
           cat CODEOWNERS || echo "CODEOWNERS file not found, skipping collaborator addition."
+          echo "===================================="
 
           # Extract GitHub usernames and teams from CODEOWNERS
           owners=$(grep -v '^#' CODEOWNERS | awk '{$1=""; print $0}' | tr -s ' ' '\n' | grep '^@' | sort -u)
@@ -61,6 +63,7 @@ jobs:
           echo "Found owners: $owners"
 
           for owner in $owners; do
+            echo "Processing owner: $owner"
             # Extract user or team name
             if [[ "$owner" =~ ^@([^/]+)$ ]]; then
               username="${BASH_REMATCH[1]}"
