chore: add environment deletion step to setup workflow

--- a/.github/workflows/setup-environments.yaml
+++ b/.github/workflows/setup-environments.yaml
@@ -56,7 +56,7 @@ jobs:
 
           # Extract GitHub usernames and teams from CODEOWNERS
           owners=$(grep -v '^#' CODEOWNERS | awk '{$1=""; print $0}' | tr -s ' ' '\n' | grep '^@' | sort -u)
-          
+
           for owner in $owners; do
             echo "Processing owner: $owner"
 
@@ -77,6 +77,22 @@ jobs:
           done
 
           echo "::endgroup::"
+
+      - name: Delete all environments
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT }}
+        run: |
+          set -euo pipefail
+
+          echo "::group::Fetching environments"
+          environments=$(gh api "/repos/${GITHUB_REPOSITORY}/environments" --jq '.environments[].name')
+          echo "::endgroup::"
+
+          for env in $environments; do
+            echo "::group::Deleting environment: $env"
+            gh api --method DELETE "/repos/${GITHUB_REPOSITORY}/environments/$env"
+            echo "::endgroup::"
+          done
 
       - name: Create environments with secrets and variables
         working-directory: ${{ github.workspace }}
